[project]
name = "extension_package"
version = "0.0.1"
description = "Hello World to Extension"
authors = [{ email = "me@earth.com" }, { name = "me" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools","wheel","cython"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/Lashi0812/Package"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
harmony = "imppkg.harmony:main"