[project]
name = "first_package"
version = "0.0.1"
description = "Hello World to packing"
authors = [{ email = "me@earth.com" }, { name = "me" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
repository = "https://github.com"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]
